# sep-plot

./: .gitignore  pyproject.toml
dockers/: Dockerfile.centos  Dockerfile.debian  Dockerfile.debian-dev
notebooks/: Example SepPlot document.ipynb  Untitled1.ipynb
sep_plot/: Attributes.py  Clip.py  Contour.py  Cubeplot.py  Dataset.py  Slice.py  __init__.py  _communicate.py  _dots.py  _graph.py  _grey.py  _orient.py  _plot_params.py  _shared.py  display.py  graph.py  oldSepPlot.py  palette.py  panels.py  plotType.py  plot_base.py  sepCube.py
tests/: testDataset.py  testOrient.py  testSepPlot.py
