[project]

name='sep_plot'
version='0.9.102'
description='A library to do basic sep graphics'

authors=[
    {name="Bob Clapp", email="bob@sep.stanford.edu"}
]

maintainers=[
    {name="Bob Clapp", email="bob@sep.stanford.edu"}
]
dependencies=[ 'holoviews>=1.14.1', 
      'sep_python @ git+https://github.com/SEP-software/sep-python.git@33d0fa36811f8d80c4abc2b1e7a35c40d006e3e9'
            ]


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

