[project]

name='sep_plot'
version='0.9.102'
description='A library to do basic sep graphics'

authors=[
    {name="Bob Clapp", email="bob@sep.stanford.edu"}
]

maintainers=[
    {name="Bob Clapp", email="bob@sep.stanford.edu"}
]
dependencies=[ 'holoviews>=1.14.1', 
      'sep_python @ git+https://github.com/SEP-software/sep-python.git@3caa6ce3282ade458bc51cda284f00e4990b0e47'
            ]


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

